# doctown-v7

./: .gitignore  AGENT_REVIEW.md  Cargo.toml  DOCPACK_FORMAT.md  EXPLAIN_FEATURE.md  MCP-QUICKSTART.md  add-to-claude.sh  start-mcp-server.sh  status-mcp-server.sh  stop-mcp-server.sh  test_ask_tool.sh  test_explain_feature.sh  test_http_mcp.py  test_mcp.sh  test_signature_search.py  test_write_tools.sh  test_ws_connection.py
doctown-agent/: Cargo.toml  README.md  WEBSOCKET.md  manifest.json
doctown-agent/examples/: mcp-client-config.json
doctown-agent/src/: lib.rs  main.rs
doctown-agent/src/api/: editor.rs  graph.rs  hotspots.rs  mod.rs  query.rs  search.rs  subsystems.rs  tasks.rs  write.rs
doctown-agent/src/mcp/: mod.rs  server.rs  sse.rs  websocket.rs
src/: agent.rs  community.rs  docgen.rs  docpack.rs  embedding.rs  ingest.rs  lib.rs  llm.rs  main.rs  nlp.rs
