[package]
name = "doctown"
version = "7.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }
tree-sitter = "0.25.10"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-rust = "0.24.0"
url = "2.5.7"
zip = "6.0.0"
