[package]
name = "doctown"
version = "7.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"] }
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }
tree-sitter = "0.25.10"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-rust = "0.24.0"
url = "2.5.7"
zip = "6.0.0"
ndarray = "0.17.1"
tokenizers = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }