[package]
name = "doctown-agent"
version = "7.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
zip = "6.0.0"

# For reading .docpack files
doctown = { path = "..", package = "doctown" }
