[package]
name = "doctown-agent"
version = "7.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
axum = "0.7"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.28"
uuid = { version = "1.11", features = ["v4"] }
zip = "6.0.0"

# For reading .docpack files
doctown = { path = "..", package = "doctown" }
